--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <html>
   <body>
-    <canvas id="gameCanvas" width="640" height="480">
+    <canvas id="gameCanvas" width="1280" height="960">
           This text is displayed if your browser does not support HTML5.
     </canvas>
+	<script src="sprite.js"></script>
+	<script src="vector2.js"></script>
 	<script src="keyboard.js"></script>
 	<script src="statemanager.js"></script>
 	<script src="basestate.js"></script>
 	<script src="splashstate.js"></script>
-	<script src="menustate.js"></script>
+	<script src="gamestate.js"></script>
+	<script src="deathstate.js"></script>
+	<script src="winstate.js"></script>
+	<script src="player.js"></script>
+	<script src="enemy.js"></script>
+	<script src="bullet.js"></script>
 	<script src="main.js"></script>
+	<script src="level1.js"></script>
   </body>
 </html>
