Moving some things around

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </style></head>
   <body>
     <p id="Title">HTML5 Space Shmup</p>
-    <p><br>
-    </p>
+    <p><a href="file:///C:/Users/Artorias/Documents/how%20to.html">How to Play</a>&nbsp;
+      &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a href="file:///C:/Users/Artorias/Documents/about.html">About
+        &amp; Credits</a> </p>
     <canvas id="gameCanvas" width="1280" height="960"> This text is displayed if
       your browser does not support HTML5. </canvas>
     <script src="howler.js"></script>
@@ -34,8 +36,7 @@
     </p>
     <p><br>
     </p>
-    <a href="how%20to.html">How to Play</a>&nbsp; &nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-    &nbsp; <a href="about.html">About &amp; Credits</a>
+    <br>
+    <a href="about.html"></a>
   </body>
 </html>
