--- a/how to.html
+++ b/how to.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <p>Use W A S and D to move the ship.</p>
-    <p>Use SPACE to fire. Firing depletes the blue energy bar. You cannot fire
-      without energy.</p>
+    <p>Use LEFT SHIFT to fire. Firing depletes the blue energy bar. You cannot
+      fire without energy.</p>
     <p>Enemy bullets and crashing into enemies depletes health. Crashing into
       walls is instant death. If the red health bar is depleted, you lose.</p>
     <p>Shoot red enemies to destroy them. Blue enemies are indestructible.</p>
