--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 </style></head>
   <body>
     <p id="Title">HTML5 Space Shmup</p>
-    <p><a href="file:///C:/Users/Artorias/Documents/how%20to.html">How to Play</a>&nbsp;
+    <p><a href="how%20to.html">How to Play</a>&nbsp; &nbsp;&nbsp;&nbsp;
       &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a href="file:///C:/Users/Artorias/Documents/about.html">About
-        &amp; Credits</a> </p>
+      &nbsp;&nbsp;&nbsp; &nbsp; <a href="about.html">About &amp; Credits</a> </p>
     <canvas id="gameCanvas" width="1280" height="960"> This text is displayed if
       your browser does not support HTML5. </canvas>
     <script src="howler.js"></script>
